compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__bit_string.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  <<x:bits>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  <<x:bits>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go(x) {
  return toBitArray([x]);
}
