compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__bit_string_typescript.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 159
expression: "\npub fn go(x) {\n  <<x:bits>>\n}\n"
---
import type * as _ from "../gleam.d.mts";

export function go(x: _.BitArray): _.BitArray;

