compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__bits.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 148
expression: "\nfn go(x) {\n  <<x:bits>>\n}\n"
---
import { toBitArray } from "../gleam.mjs";

function go(x) {
  return toBitArray([x.buffer]);
}

