compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__bits_pattern_requires_v1_9.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn main() {\n  let assert <<_:bits>> = <<0>>\n}\n  "
---
----- SOURCE CODE

pub fn main() {
  let assert <<_:bits>> = <<0>>
}
  

----- WARNING
warning: Redundant assertion
  ┌─ /src/warning/wrn.gleam:3:7
  │
3 │   let assert <<_:bits>> = <<0>>
  │       ^^^^^^ You can remove this

This assertion is redundant since the pattern covers all possibilities.

warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:3:18
  │
3 │   let assert <<_:bits>> = <<0>>
  │                  ^^^^ This requires a Gleam version >= 1.9.0

Use of unaligned bit arrays on the JavaScript target was introduced in
version v1.9.0. But the Gleam version range specified in your `gleam.toml`
would allow this code to run on an earlier version like v1.8.0, resulting
in compilation errors!

Hint: Remove the version constraint from your `gleam.toml` or update it to
be:

    gleam = ">= 1.9.0"
