compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__bits_typescript.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  <<x:bits>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  <<x:bits>>
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export function go(x: _.BitArray): _.BitArray;
